--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,4 +5,5 @@ header{
     position: fixed;
     display: flex;
     justify-content: right;
+    z-index: 2;
 }
